autotests/syntax-tests-simple-refal/tests/negative/negative105.sref
Name { Name Name , Name Name : $SWAP Name Name , : = : = ; =
; } ; 